# ble-mesh-atmospheric-sensor

./: .gitignore  TODO  west.yml
app/: CMakeLists.txt  prj.conf
app/boards/: nucleo_wb55rg.overlay
app/src/: board.c  board.h  main.c  mesh.h  sensor.c  sensor.h
